Name:                SpreadsheetML-rich
Version:             under develop..
Synopsis:            Enhanced version of SpreadsheetML to support rich-text table.
                     Forked from https://github.com/dagit/SpreadsheetML
Description:         Output XML in the SpreadsheetML namespace. This allows you
                     to generate XLS file for excel. Binary compressed Office Open Document format
                     not yet supported, but you can take this xml output and name it ".xls" and
                     Excel will be able to open the document as a spreadsheet.
License:             BSD3
License-file:        LICENSE
Author:              Boyun Tang
Maintainer:          tangboyun@hotmail.com

Category:            Text

Build-type:          Simple

Cabal-version:       >=1.8


Library
  -- Modules exported by the library.
  hs-source-dirs:         src
  Exposed-modules:     Text.XML.SpreadsheetML.Types
                       Text.XML.SpreadsheetML.Writer
                       Text.XML.SpreadsheetML.Builder
  
  -- Packages needed in order to build this package.
  Build-depends:       base > 3 && < 5,
                       xml >= 1.3 && < 1.4,
                       colour
  
  -- Modules not exported by this package.
  Other-modules:       Text.XML.SpreadsheetML.Internal
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

source-repository head
  type: git
  location: https://github.com/tangboyun/SpreadsheetML
