Name:                SpreadsheetML-rich
Version:             0.1.1.1
Synopsis:            Rich text Spreadsheet
Description:         
    .
    Enhanced version of package SpreadsheetML. Output XML in the SpreadsheetML namespace. This allows you
    to generate XLS file for excel. Binary compressed Office Open Document format
    not yet supported, but you can take this xml output and name it \".xls\" and
    Excel will be able to open the document as a spreadsheet.
    .
    Changes in version 0.1.1.0
    .
    * Support hyperlinks
    . 

License:             BSD3
License-file:        LICENSE
Author:              Jason Dagit (2012), Boyun Tang (2012)

Maintainer:          tangboyun@hotmail.com
Copyright:           Galois, Inc (2012), Boyun Tang (2012)

Category:            Text

Build-type:          Simple

Cabal-version:       >=1.10


Library
  hs-source-dirs:      src
  Exposed-modules:     Text.XML.SpreadsheetML.Types
                       Text.XML.SpreadsheetML.Writer
                       Text.XML.SpreadsheetML.Builder
                       Text.XML.SpreadsheetML.Util

  Other-modules:       Text.XML.SpreadsheetML.Internal

  Build-depends:       base,
                       xml,
                       colour,
                       containers
  default-language:    Haskell2010
